# pydocx-pdf

./: .gitignore  CHANGELOG.md  FONT_SUPPORT.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
pydocx_pdf/: __init__.py  cli.py  converter.py  exceptions.py  font_map.py  unzipper.py  utils.py
pydocx_pdf/models/: __init__.py  document.py  image.py  paragraph.py  table.py
pydocx_pdf/parser/: __init__.py  document.py  numbering.py  relationships.py  styles.py  theme.py
pydocx_pdf/renderer/: __init__.py  paragraph.py  pdf_writer.py  table.py
pytest-cache-files-vbn_v0oc/v/cache/: nodeids
tests/: test_character_spacing.py  test_converter.py  test_styles.py  test_unzipper.py
