[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "pydocx-pdf"
version = "0.1.0"
description = "Convert Word documents (.docx) to PDF with no system dependencies. EKS/container safe."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Safiuddeen Salem", email = "safialhasi@gmail.com" }]
dependencies = [
    "fpdf2>=2.7",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov",
    "mypy",
    "ruff",
]

[project.scripts]
pydocx-pdf = "pydocx_pdf.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pydocx_pdf*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
addopts = "--basetemp=/tmp/pytest-pydocx"

[tool.mypy]
python_version = "3.9"
strict = true
